--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- <meta name="description" content="Daniel Mattox is a talented freelance full stack web developer with a proven track record complete with client testimonials on completed contracts"> -->
+    <meta name="description" content="Welcome to Daniel Mattox's website. As an experienced web developer, I specialize in creating innovative and user-friendly digital experiences. With a background in IT and formal training from Lambda School's boot camp program, I am dedicated to helping students and engineers overcome coding challenges. Explore my portfolio, services, and blog to discover how I can assist you in achieving your coding goals.">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="apple-touch-icon" href="logo192.png">    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Daniel Mattox | Full Stack Web Developer | I make stuff</title>
   </head>
   <body>
     <div id="root"></div>
